--- a/src/App.css
+++ b/src/App.css
@@ -15,5 +15,11 @@
   text-shadow:none;
   
   }
-
+.date-picker{
+  height: 30px;
+  width: 100%;
+  border: 1px solid rgb(212, 209, 209);
+  border-radius: 5px;
+  
+}
 
