--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 .App {
   text-align: center;
   padding: 20%;
+  display: block;
 
+}
+.dateandtime-picker-box{
+  display: inline-block;
+  display: flex;
+  border: 1px solid rgb(212, 209, 209);
+  border-radius: 5px;
+  margin-bottom: 10px;
+
+}
+.react-datepicker-wrapper {
+  display: inline-block;
+  width: 100%;
+  height: 30px;
+ font-weight: normal;
+  border-radius: 5px;
+  
 }
 .form-submit-button {
   margin-top: 20px;
@@ -15,11 +32,5 @@
   text-shadow:none;
   
   }
-.date-picker{
-  height: 30px;
-  width: 100%;
-  border: 1px solid rgb(212, 209, 209);
-  border-radius: 5px;
-  
-}
+
 
